# etu_cw2

./: CMakeLists.txt  Readme.md  cw
src/: check_args_amount.cpp  check_args_amount.h  color_replace.cpp  color_replace.h  consts.h  getFileInfo.h  main.cpp  new_file.h  print_functions.cpp  print_functions.h  validate_args.cpp  validate_args.h
src/images_functions/: color_replace.h  copy_part.cpp  copy_part.h  getFileInfo.cpp  imageStructs.h  mirror.cpp  mirror.h  new_file.cpp  parsing_fucntions.h  parsing_functions.cpp  split.h
src/input_functions/: check_args_amount.cpp  check_args_amount.h  flag_utils.cpp  flag_utils.h  process_flags.cpp  process_flags.h  validate_args.cpp  validate_args.h
